--- a/drones/src/main/resources/application.properties
+++ b/drones/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.propeties.hibernate.format_sql=true
 
 server.error.include-message=always
+
+logging.level.com.example.drones=DEBUG
