--- a/drones/pom.xml
+++ b/drones/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>drones</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>drones</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Proyecto de Control de Drones</description>
 	<url />
 	<licenses>
 		<license />
@@ -64,6 +64,15 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.4</version>
 		</dependency>
 	</dependencies>
 
