--- a/drones/src/main/resources/application.properties
+++ b/drones/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=drones
-spring.datasource.url=jdbc:mysql://localhost:3306/dronesdb
+
+spring.datasource.url=jdbc:mysql://db:3306/dronesdb
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.propeties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 
